# oss-newsletter-agent

./: README.md  main.py  pyproject.toml  requirements.txt
src/: graph.py  router.py  state.py
src/nodes/: checker.py  ingestion.py  writer.py
